force-app/main/default/objects/Other_Grants__c/Other_Grants__c.object-meta.xml
<CustomObject>
    <label>Other Grants</label>
    <nameField>
        <displayFormat>OG-{00000}</displayFormat>
        <label>Other Grants Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>