force-app/main/default/objects/Other_Grants__c/fields/Abstract_Ongoing__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Ongoing__c</fullName>
    <label>Abstract(Ongoing)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>