force-app/main/default/objects/Other_Grants__c/fields/Applicant_Proposal_Association__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Proposal_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Proposal Association</label>
    <referenceTo>Applicant_Proposal_Association__c</referenceTo>
    <relationshipLabel>Other Grants</relationshipLabel>
    <relationshipName>Other_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>