force-app/main/default/objects/Other_Grants__c/fields/Expected_date_of_decision__c.field-meta.xml
<CustomField>
    <fullName>Expected_date_of_decision__c</fullName>
    <description>Expected date of decision</description>
    <inlineHelpText>Expected date of decision</inlineHelpText>
    <label>Expected date of decision</label>
    <type>Date</type>
</CustomField>