force-app/main/default/objects/Other_Grants__c/fields/Grants_Type__c.field-meta.xml
<CustomField>
    <fullName>Grants_Type__c</fullName>
    <label>Grants Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous DBT Grants</fullName>
            </value>
            <value>
                <fullName>Other Grants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>