force-app/main/default/objects/Other_Grants__c/fields/Key_difference_from_previous_application__c.field-meta.xml
<CustomField>
    <fullName>Key_difference_from_previous_application__c</fullName>
    <label>Key difference from previous application</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>