force-app/main/default/objects/Other_Grants__c/fields/Name_of_Ongoing_funding_agency_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Ongoing_funding_agency_Scheme__c</fullName>
    <label>Name of Ongoing funding agency &amp; Scheme</label>
    <type>TextArea</type>
</CustomField>