force-app/main/default/objects/Other_Grants__c/fields/Ongoing_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Project_Title__c</fullName>
    <label>Ongoing Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>