force-app/main/default/objects/Other_Grants__c/fields/Overlap_with_current_IA_application__c.field-meta.xml
<CustomField>
    <fullName>Overlap_with_current_IA_application__c</fullName>
    <description>Indicate degree of overlap with current India Alliance application, if any</description>
    <inlineHelpText>Indicate degree of overlap with current India Alliance application, if any</inlineHelpText>
    <label>Overlap with current IA application</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>