force-app/main/default/objects/Other_Grants__c/fields/Previous_Application_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Previous_Application_Project_Title__c</fullName>
    <label>Previous Application Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>