force-app/main/default/objects/Other_Grants__c/fields/Previous_Application_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Application_Reference_Number__c</fullName>
    <label>Previous Application Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>