force-app/main/default/objects/Other_Grants__c/fields/Previous_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Previous_Scheme__c</fullName>
    <label>Previous Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>