force-app/main/default/objects/Other_Grants__c/fields/Your_Role_on_the_Application__c.field-meta.xml
<CustomField>
    <fullName>Your_Role_on_the_Application__c</fullName>
    <label>Your Role on the Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>CoPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>